- CURRIKI-4715  - Fix height for Bio field of Edit Profile to not have a fixed (too big) height
svn@22265

--- a/web/src/main/webapp/skins/curriki8/style2.css
+++ b/web/src/main/webapp/skins/curriki8/style2.css
@@ -303,6 +303,8 @@ form#inline span.xwiki-form-listclass input { margin: 0 2px 0 0; }
 .subject-educational td { font-size: 0; }
 .subject-educational td .entry, .subject-educational td .ygtvitem, .subject-educational td td, .subject-educational .xwiki-form-listclass { font-size: 12px; }
 #mce_editor_0_parent .mceEditor { height: 20em !important; }
+/* CURRIKI-4715 - Previous line breaks editor in Edit Profile (too tall) */
+#register #mce_editor_0_parent .mceEditor { height: auto !important; }
 #attachment_iframe { border: none; margin-left: -10px; }
 .entry { font-family: Arial,sans-serif; }
 table.instruction { margin: 10px 0; }
